k8s/minikubevalues.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld1
  labels:
    app: helloworld1
    service: helloworld1
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld1
